--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 span{
 }
 .date-picker .selected-date{
     width: 100%;
-/*     height: 100%; */
+    height: 100%;
     height: 60px;
     display: flex;
     justify-content: center;
