--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ h1 span{
 .date-picker .selected-date{
     width: 100%;
     height: 100%;
-    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,7 +57,7 @@ h1 span{
 .date-picker .dates{
     display: none;
     position: absolute;
-    top: 100%;
+    top: 55px;
     left: 0;right: 0;
     
 }
